fix spacing

--- a/styles.css
+++ b/styles.css
@@ -61,12 +61,12 @@ body {
 .blue-section {
     position: relative;
     background-color: rgb(5, 87, 255);
-    padding: 195px 0;
     display: flex;
     justify-content: center;
 }
 
 .blue-section-content {
+    padding: 300px 400px 224px 0px;
     max-width: 1200px;
     width: 100%;
 }
@@ -74,12 +74,10 @@ body {
 .cta-1 {
     border: 1px solid rgba(255, 255, 255, 1);
     border-radius: 5px;
-    padding-bottom: 21px;
-    padding-top: 21px;
+    padding: 20px;
     background-color: rgba(5, 87, 255, 1);
     color: white;
     font-size: 18px;
-    width: 175px;
     cursor: pointer;
 }
 
@@ -103,7 +101,7 @@ body {
 }
 
 .paragraph-2 {
-    margin-top: 40px;
+    margin: 0;
     display: flex;
     align-items: center;
 }
@@ -114,19 +112,20 @@ body {
     font-size: 20px;
     letter-spacing: 0.25px;
     line-height: 25px;
-    width: 386px;
-    height: 70px;
     cursor: pointer;
     border-style: none;
     border-radius: 5px;
+    padding: 20px 0px;
+    width: 50%;
 }
 
 .paragraph-3 {
     color: white;
     font-size: 18px;
-    letter-spacing: 0.22 px;
+    letter-spacing: 0.22px;
     line-height: 25px;
-    margin-left: 39px;
+    margin-left: 45px;
+    width: 50%;
 }
 
 .group-logo {
@@ -161,12 +160,13 @@ body {
 
 .content-men {
     width: 50%;
-    height: 870px;
     overflow: hidden;
 }
 
 .group-list {
     margin-left: 100px;
+    padding-right: 315px;
+    width: 50%;
 }
 
 .title-2 {
@@ -227,6 +227,22 @@ body {
     margin-top: 47px;
 }
 
+.author {
+    padding: 0px 25px;
+}
+
+.author1 {
+    padding: 0px 45px 0px 20px;
+}
+
+.author2 {
+    padding: 0px 75px 0px 20px;
+}
+
+.group-a-b {
+    padding: 0px 606px;
+}
+
 .man-1 {
     margin-right: 19px;
 }
@@ -234,7 +250,6 @@ body {
 .group-a {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     margin-top: 65px;
 }
 
@@ -259,7 +274,8 @@ body {
 
 .group-paragraph {
     max-width: 1200px;
-    margin: auto;
+    margin-top: 115px;
+    padding: 0px 360px 0px 200px;
 }
 
 .para-1 {
@@ -272,13 +288,13 @@ body {
 .para-2 {
     font-size: 18px;
     line-height: 28px;
-    letter-spacing: 0.22 px;
+    letter-spacing: 0.22px;
 }
 
 .para-3 {
-    ont-size: 18px;
+    font-size: 18px;
     line-height: 28px;
-    letter-spacing: 0.22 px;
+    letter-spacing: 0.22px;
 }
 
 .cat-4 {
@@ -309,7 +325,7 @@ body {
     margin-top: 140px;
     font-size: 42px;
     line-height: 48.3px;
-    letter-spacing: 0.5 px;
+    letter-spacing: 0.5px;
 }
 
 .paragraph-b {
@@ -332,7 +348,8 @@ body {
 }
 
 .styles {
-    padding-left: 360px;
+    width: 50%;
+    padding: 260px 60px 160px 360px;
     font-size: 19px;
     line-height: 27px;
     letter-spacing: 0.23px;
@@ -340,7 +357,6 @@ body {
 }
 
 .paragraph-small {
-    padding-top: 155px;
     display: flex;
 }
 
@@ -358,8 +374,8 @@ body {
 }
 
 .paragraph-grand-smal {
-    margin-left: 100px;
-    padding-top: 50px;
+    padding: 150px 275px 150px 100px;
+    width: 50%;
 }
 
 .grand {
@@ -376,23 +392,21 @@ body {
 
 .cat-5 {
     border: 0;
-    border-radius: ;
+    border-radius: 5px;
     background-color: rgba(255, 207, 38, 1);
     width: 175px;
-    height: 60px;
     margin-top: 35px;
     font-size: 18px;
     line-height: 25px;
     letter-spacing: 0.22px;
     cursor: pointer;
+    padding: 20px 0px;
 }
 
 .background-blue-2 {
     background-color: rgba(5, 87, 255, 1);
     max-width: 1920px;
-    height: 745px;
     padding: 130px;
-    margin-top: 150px;
 }
 
 .box {
@@ -443,10 +457,14 @@ body {
     text-align: center;
 }
 
+.box-small {
+    display: flex;
+    justify-content: center;
+}
+
 .border-2 {
     background-color: rgba(255, 255, 255, 1);
     border-radius: 10px;
-    margin-left: 170px;
     width: 207px;
     padding: 25px;
 }
@@ -465,7 +483,7 @@ body {
 }
 
 .p-2 {
-    padding-top: 23px;
+    padding: 0px 527px;
     font-size: 42px;
     line-height: 48.3px;
     letter-spacing: 0.5px;
@@ -476,11 +494,11 @@ body {
     border-radius: 5px;
     background-color: rgba(255, 207, 38, 1);
     width: 386px;
-    height: 70px;
     font-size: 20px;
     line-height: 48.25px;
-    letter-spacing: 0.24 px;
+    letter-spacing: 0.24px;
     cursor: pointer;
+    padding: 20px 0px;
 }
 
 .footer {
@@ -507,7 +525,7 @@ body {
 .title-5 {
     font-size: 18px;
     line-height: 25px;
-    letter-spacing: 0.22;
+    letter-spacing: 0.22px;
 }
 
 .code-lab-1 {
@@ -517,7 +535,9 @@ body {
 .parag {
     font-size: 18px;
     line-height: 28px;
-    letter-spacing: 0.22;
+    letter-spacing: 0.22px;
+    padding: 0px 161px 0px 0px;
+    opacity: 0.5;
 }
 
 .spans {
@@ -534,6 +554,7 @@ body {
     letter-spacing: 0.22;
     display: flex;
     margin-bottom: 50px;
+    opacity: 0.5;
 }
 
 .border-bottom {
